--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 .App {
-  margin: 0px 16px;
+  margin: 0 auto;
+  max-width: 500px;
+  /* ^^ Temporary constraint so it's mobile view all the time, will remove for tablet/desktop view once we get it */
 }
