--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   margin: 0 auto;
   max-width: 575px;
+  width: 100%;
   /* ^^ Temporary constraint so it's mobile view all the time, will remove for tablet/desktop view once we get it */
+  /* height: 100vh; */
+
+  /* justify-content: space-between; */
 }
