--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Muli";
+  /* Full width/height override from react */
+  position: absolute;
+  width: 100% !important;
+  height: 100% !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  margin: 0;
+  padding: 0;
 }
