--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,7 @@
   width: 100%;
   /* ^^ Temporary constraint so it's mobile view all the time, will remove for tablet/desktop view once we get it */
 }
+
+.ReactCollapse--collapse {
+  transition: height 500ms;
+}
